feat: P4ADEV-2797 implemented IO events mappers (#8)
Co-authored-by: Dan Bota <dan.bota@nttdata.com>